--- a/freaky_friday/regressions.qmd
+++ b/freaky_friday/regressions.qmd
@@ -41,7 +41,7 @@ main <- readRDS(here("data", "freaky_friday", "main.RDS")) %>%
 
 The main regression table only compares the bottom quintile to the top quintile. @dellavigna2009 also specify a number of indicator variables based on year, month, and the size of the firm (adjusted for the average of the logarithm of the size).
 
-@dellavigna2009 also control for the volatility of earnings surprises where volatility is measured by the standard deviation in the 4 years before the earnings announcement. It turns out that this is a quite computational expensive exercise. Below, I first write a function with to select the necessary earnings surprises and than calculate the standard deviation. Than, I use the function making use of the `dtplyr` package which makes use of the faster `data.table` package to do data cleaning. The only extra step we need to make is to make the `main` data compatible with the package through the `lazy_dt` function and use the new compatible `main_dt` in our function. You can see that the two functions give the same result on a test firm and that we decrease the run time of the function by a factor of 2.
+@dellavigna2009 also control for the volatility of earnings surprises where volatility is measured by the standard deviation in the 4 years before the earnings announcement. It turns out that this is a quite computational expensive exercise. Below, I first write a function to select the necessary earnings surprises and than calculate the standard deviation. Than, I use the function with the `dtplyr` package which makes use of the faster `data.table` package to do the data cleaning. The only extra step we need to make is to make the `main` data compatible with the package through the `lazy_dt` function and use the new compatible `main_dt` in our function. You can see that the two functions give the same result on a test firm and that we decrease the run time of the function by a factor of 2.
 
 :::{.callout-warning}
 It turns out that the speed gain is in the advantage of the `tidyverse` implementation on my Mac Mini. This could be because I have installed a more recent version on my Mac Mini of the `tidyverse`. I am going to investigate this further at some point. Nevertheless it shows the advantage of timing the different implementations. So I am going to leave them here.
@@ -117,8 +117,8 @@ The tables do not really replicate which is interesting to me. For a number of r
 ### Panel A: Short Term CAR
 
 ```{r}
-subset <- readRDS(here("data", "freaky_friday", "subset.RDS"))
 #| label: table2a
+subset <- readRDS(here("data", "freaky_friday", "subset.RDS"))
 model1a <- feols(car_short ~ friday * top,
                  cluster = "anndat",
                  data = subset)
