--- a/machine_learning/predictions.qmd
+++ b/machine_learning/predictions.qmd
@@ -6,7 +6,7 @@ title: Predictions
 
 So far in the course, I have made the assumption that our research is mainly interested in estimating a certain parameter of interest, i.e. we want to know the effect of a certain variable on a certain outcome variable. For instance, we are interested in the effect of a policy uncertainty on a firm's investment decisions [@falk2018], or the use of options in CEO compensation on risk taking [@shue2017]. In terms of a regression model, $y_i = \alpha + \beta x_i + \gamma z_i + \epsilon_i$, we are interested in $\beta$, the effect of $x$ on $y$ after controlling for $z$. All the statistical and conceptual tools in the lectures had the aim of making sure that the estimate $\hat{\beta}$ is the best possible estimate of the true underlying and unobserved $\beta$ [@mullainathan2017].
 
-In contrast, some research questions focus on building a model to predict the outcomes. In that case, we are not interested in the estimated parameter $\beta$ (or $\alpha$ or $\gamma). We are interested in the prediction $\hat{y}$, especially for future or unobserved cases [@mullainathan2017]. One of the biggest risks for prediction tasks is that our model excels at predicting the outcomes in the data that we have but it is rubbish at predicting for new data. In that case, our model is *overfitting*. The strength of a lot of machine learning applications is that they excel at incorporating a lot of variables while at the same time guard against overfitting. If prediction is the research question these are the methods we should turn to.
+In contrast, some research questions focus on building a model to predict the outcomes. In that case, we are not interested in the estimated parameter $\beta$ (or $\alpha$ or $\gamma$). We are interested in the prediction $\hat{y}$, especially for future or unobserved cases [@mullainathan2017]. One of the biggest risks for prediction tasks is that our model excels at predicting the outcomes in the data that we have but it is rubbish at predicting for new data. In that case, our model is *overfitting* for the purpose of predicting future outcomes. The strength of a lot of machine learning applications is that they excel at incorporating a lot of variables while at the same time guard against overfitting. If prediction is the research question these are the methods we should turn to.
 
 # Content
 
@@ -26,4 +26,4 @@ One way to think about this is that we are splitting up the regression in two st
 
 Another related application is that we want to use the machine learning techniques to predict the causal variable of interest with the predictors z, so that we can use $x - \hat{x}$ as the new causal variable and estimate it's effect on $y - \hat{y}$. For some research questions, it will be appropriate to say that after we removed the influence of a bunch of observable factors, we are more confident that the remaining variation in $x$ and $y$ is the capturing the causal effect we are interested in. However, remember that sometimes the opposite is true. In the [@shue2017] paper, we wanted to predict the changes in the option awards that followed a predictable schedule. The paper essentially used a very simple prediction model to predict the option awards that we could treat as if they are random (or exogenous).
 
-A final application is when you want to increase the dataset when you need to collect some variable by manually labelling or categorising some data. Sometimes it is possible to collect the data manually for a subset of the data. You can then use the machine learning tools to predict what variable based on the relation between predictors and your measure in the manually collected data.
+A final application is when you want to increase the dataset when you need to collect some variable by manually labelling or categorising some data. Sometimes it is possible to collect the data manually for a subset of the data. You can then use the machine learning tools to predict the key variable based on the relation between predictors and your measure in the manually collected data.
